Bug Fix: fixes window resizing and moving panels bug. If the window resized and put the panel past the half threshold on the right, the old right value would be used and there would be a big jump. A better more general approach is probably to just update these values directly on window resizing.

--- a/fdds/css/catalogMenu.css
+++ b/fdds/css/catalogMenu.css
@@ -122,7 +122,6 @@
 @media (max-width: 769px) {
     .catalog-menu {
         width: 300px;
-        left: 35px;
         top: 85px;
     }
 
