--- a/fdds/css/layerController.css
+++ b/fdds/css/layerController.css
@@ -37,7 +37,7 @@
         width: 300px;
         height: 440px;
         top: 85px;
-        left: 30px;
+        right: 30px;
         overflow-y: auto;
     }
 }
